# py-psd

./: README.md  cli.py  main.py  pyproject.toml  pytest.ini
app/: cli.py  gui.py  main.py  prime.py  prime_direct.py  prime_interface.py  prime_rpc.py  rpc_server.py
app/prime/: __init__.py
app/rpc/: rpc_client.py  rpc_server.py
app/tests/: conftest.py  test_prime.py  test_rpc.py
benchmark/: c_py.py  cpp_py.py
prime/: __init__.py  prime.py  prime_c.py  prime_cpp.cpp  prime_cpp.py
rpc/: __init__.py  rpc_client.py  rpc_server.py
tests/: conftest.py  test_prime.py  test_prime_c.py  test_prime_cpp.py
