[project]
name = "py-psd"
version = "1.0.0"
description = ""
authors = [
    {name = "gleb",email = "deffender1337@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
